[package]
name = "rrm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdsview"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }  # 升级版本并添加scrollbar特性
redis = "0.23.0"
crossterm = "0.25.0"
unicode-segmentation = "1.10.1"
thiserror = "1.0.40"
anyhow = "1.0.71"
clap = { version = "4.4.8", features = ["derive"] }